--- a/bootstrap-cv-resume-template/index.html
+++ b/bootstrap-cv-resume-template/index.html
@@ -70,20 +70,20 @@
                                 <img src="img/icons/email.png" class="w-10 contact" style="width: 50px" alt="">
                             </a>
 
-                            <a href="https://github.com/maxred01/qa3022" target="_blank">
+                            <a href="https://github.com/natalyaivanenko123/Tesla.git" target="_blank">
                                 <img src="img/icons/gh.png" class="w-10 contact" style="width: 50px;  border: 1px solid white;    border-radius: 13px;    background: white;" alt="">
                             </a>
                         </div>
 
 
                         <div style="text-align: left" class="mt-4">
-                           <a href="https://github.com/maxred01/qa3022" target="_blank" class="text-white mt-4">
+                           <a href="https://github.com/natalyaivanenko123/Tesla.git" target="_blank" class="text-white mt-4">
                                 <span class="fw-medium text-primary">Email:</span> natalya-09@mail.ru
                             </a>
                             <br>
 
-                            <a href="https://github.com/maxred01/qa3022" target="_blank" class="text-white">
-                                <span class="fw-medium text-primary">Github:</span> github.com/maxred01/qa3022
+                            <a href="https://github.com/natalyaivanenko123/Tesla.git" target="_blank" class="text-white">
+                                <span class="fw-medium text-primary">Github:</span> github.com/natalyaivanenko123/Tesla
                             </a>
                         </div>
                     </div>
@@ -361,7 +361,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/10885432.gif" alt="">
                                            <div class="project-item-text">
-                                               Test Tesla shop page
+                                               Tests Tesla UI/UX
                                            </div>
                                         </div>
                                     </div>
@@ -370,41 +370,16 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
                                         <div class="project-item position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/world-globe-neon-sign-vector-26918223.jpg" alt="">
                                             <div class="project-item-text">
-                                                Test api 1
+                                                Tests Tesla API
                                            </div>
                                         </div>
                                     </div>
 
-                                     <div class="col-md-6 mb-4 portfolio-item first">
-                                        <div class="project-item position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/tesla-model-3-lightkit-teslachew.jpg" alt="">
-                                            <div class="project-item-text">
-                                              Test Tesla test-drive page
-                                           </div>
-                                        </div>
-                                    </div>
-                                     <div class="col-md-6 mb-4 portfolio-item first">
-                                        <div class="project-item position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/1675450742_bogatyr-club-p-nadpis-welcome-foni-12.jpg" alt="">
-                                            <div class="project-item-text">
-                                                Test Tesla site header
-                                           </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-6 mb-4 portfolio-item first">
-                                        <div class="project-item position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/registro-plataformas-1800x1350.jpg" alt="">
-                                            <div class="project-item-text">
-                                               Test Tesla auth page
-                                           </div>
-                                        </div>
-                                    </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="project-item position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/1674852248_top-fon-com-p-foni-dlya-prezentatsii-neon-148.jpg" alt="">
                                             <div class="project-item-text">
-                                                Test api 2
+                                                Allure Tests Tesla
                                            </div>
                                         </div>
                                     </div>
