--- a/bootstrap-cv-resume-template/index.html
+++ b/bootstrap-cv-resume-template/index.html
@@ -361,7 +361,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/10885432.gif" alt="">
                                            <div class="project-item-text">
-                                               Tests Tesla UI/UX
+                                               Tests Tesla UI
                                            </div>
                                         </div>
                                     </div>
@@ -370,7 +370,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
                                         <div class="project-item position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/world-globe-neon-sign-vector-26918223.jpg" alt="">
                                             <div class="project-item-text">
-                                                Tests Tesla API
+                                                API Tests
                                            </div>
                                         </div>
                                     </div>
