--- a/bootstrap-cv-resume-template/index.html
+++ b/bootstrap-cv-resume-template/index.html
@@ -349,11 +349,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
                             <div class="col-12">
                                 <div class="row">
                                     <div class="col-12 text-center mb-2">
-                                        <ul class="list-inline mb-4" id="portfolio-flters">
-                                            <li class="btn btn-secondary active"  data-filter="*"><i class="fa fa-star me-2"></i>All</li>
-                                            <li class="btn btn-secondary" data-filter=".first"><i class="fa fa-laptop-code me-2"></i>UI/UX</li>
-                                            <li class="btn btn-secondary" data-filter=".second"><i class="fa fa-globe me-2"></i>API</li>
-                                        </ul>
+
                                     </div>
                                 </div>
                                 <div class="row portfolio-container">
@@ -361,7 +357,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/10885432.gif" alt="">
                                            <div class="project-item-text">
-                                               Tests Tesla UI
+                                               Tests UI (Tesla.com)
                                            </div>
                                         </div>
                                     </div>
@@ -379,7 +375,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
                                         <div class="project-item position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/1674852248_top-fon-com-p-foni-dlya-prezentatsii-neon-148.jpg" alt="">
                                             <div class="project-item-text">
-                                                Allure Tests Tesla
+                                                Allure
                                            </div>
                                         </div>
                                     </div>
